@@ -1,3 +1,6 @@
+* Fri Sep 28 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.1-0
+- Update project origin to `github.com/simp`
+
 * Fri Jul 29 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0-0
 - Update to the new naming scheme
 
